# AI-Interview-Coach

./: .gitignore  BUILD_REPORT.md  BUILD_REPORT_MODULE_5.md  BUILD_REPORT_MODULE_6_7.md  CHECKPOINT.md  CHECKPOINT_MODULE_5.md  CHECKPOINT_MODULE_6_7.md  CHECKPOINT_MODULE_8_9.md  FRONTEND_SETUP.md  LICENSE  README.md
backend/: .env.example  .gitignore  MODULE_7_8_SETUP.md  README_INTEGRATION.md  pyproject.toml  requirements-resume.txt  requirements.txt  test_models.py
backend/app/: coaching_dependencies.py  coding_dependencies.py  dependencies.py  embedding_dependencies.py  interview_dependencies.py  main.py  report_dependencies.py  resume_analysis_dependencies.py  resume_dependencies.py  session_dependencies.py  voice_dependencies.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: chroma.py  mongo.py
backend/app/exceptions/: auth_exceptions.py  coaching.py  coding.py  evaluation.py  handlers.py  interview.py  report.py  resume.py  session_management.py  voice.py
backend/app/models/: resume.py  user.py
backend/app/prompts/: __init__.py  coaching_prompt.py  evaluation_prompt.py  interview_prompt.py  resume_analysis_prompt.py
backend/app/repositories/: chroma_repository.py  coaching_repository.py  coding_interview_repository.py  interview_report_repository.py  interview_repository.py  resume_analysis_repository.py  resume_repository.py  user_repository.py  voice_repository.py
backend/app/schemas/: coaching.py  coding_interview.py  embedding.py  interview.py  interview_evaluation.py  interview_report.py  interview_session.py  resume.py  (+4 more)
(+141 files in other folders)
